[package]
name = "rusoto_docs_tester"
version = "0.1.0"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]
build = "build.rs"

[dependencies]
rusoto_core = "0.37"
rusoto_ecs = "0.37"
rusoto_dynamodb = "0.37"
rusoto_s3 = "0.37"
env_logger = "0.5"
tokio-core = "0.1"
futures = "0.1"
native-tls = "0.2.1"
hyper-tls = "0.3.1"
hyper = "0.12.11"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
